constraints/general-containerresourceratios-samples-container-must-meet-memory-and-cpu-ratio-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRatios
metadata: # kpt-merge: /container-must-meet-memory-and-cpu-ratio
  name: container-must-meet-memory-and-cpu-ratio
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    ratio: "1"
    cpuRatio: "10"
